spectec/test/elab/neg/type-forward-tparam-mismatch.spectec
;; Forward-declare a syntax with no type parameters, then define it
;; with one.

syntax foo
syntax foo<T> = T
